export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
"
Usage: update [issueId]

Description:

  Update a linear issue

Options:

  -h, --help                         - Show this help.                                                
  -a, --assignee      <assignee>     - Assign the issue to 'self' or someone (by username or name)    
  --due-date          <dueDate>      - Due date of the issue                                          
  -p, --parent        <parent>       - Parent issue (if any) as a team_number code                    
  --priority          <priority>     - Priority of the issue (1-4, descending priority)               
  --estimate          <estimate>     - Points estimate of the issue                                   
  -d, --description   <description>  - Description of the issue                                       
  --description-file  <path>         - Read description from a file (preferred for markdown content)  
  -l, --label         <label>        - Issue label associated with the issue. May be repeated.        
  --team              <team>         - Team associated with the issue (if not your default team)      
  --project           <project>      - Name of the project with the issue                             
  -s, --state         <state>        - Workflow state for the issue (by name or type)                 
  --milestone         <milestone>    - Name of the project milestone                                  
  -t, --title         <title>        - Title of the issue                                             

"
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;
